# cpp-ci-demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml  ci.yml
src/: CANSignal.cpp  CANSignal.h  Gear_Signal.cpp  Gear_Signal.h  RPM_Signal.cpp  RPM_Signal.h  main.cpp
tests/: test_CANSignal.cpp  test_GearSignal.cpp  test_RPMSignal.cpp  test_main.cpp
